--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- model-viewer本体 -->
     <model-viewer
       src="saikoro.glb"
-      ios-src="Part1.usdz"
+      ios-src="saikoro.usdz"
       alt="saikoro 3D"
       ar
       ar-modes="webxr scene-viewer quick-look"
