--- a/index.html
+++ b/index.html
@@ -1,25 +1,16 @@
+# saikoro02
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>saikoroAR</title>
-    <!-- model-viewer の読み込み（改行しない） -->
-    <script type="module" src="https://unpkg.com/@google/model-viewer@latest/dist/model-viewer.min.js"></script>
-  </head>
-  <body style="margin:0; padding:0;">
-    <!-- model-viewer本体 -->
-    <model-viewer
-      src="saikoro.glb"
-      ios-src="saikoro.usdz"
-      alt="saikoro 3D"
-      ar
-      ar-modes="webxr scene-viewer quick-look"
-      auto-rotate
-      camera-controls
-      style="width:100vw; height:100vh;"
-      scale="1"
-      camera-target="0m 0m 0m">
-      <button slot="ar-button">ARで表示</button>
-    </model-viewer>
-  </body>
+<head>
+<meta charset="utf-8">
+<title>saikoroAR</title>
+<script type="module" src="https://unpkg.com/@google/model-viewer@latest/dist/model-viewer.min.js"></script>
+</head>
+<body style="margin:0; padding:0;">
+<model-viewer src="saikoro.glb" ios-src="saikoro.usdz" alt="saikoro 3D" ar ar-modes="webxr scene-viewer quick-look" auto-rotate camera-controls style="width:100vw; height:100vh;"
+scale="1"
+camera-target="0m 0m 0m">
+<button slot="ar-button">ARで表示</button>
+</model-viewer>
+</body>
 </html>
